fix overflow

--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -21,9 +21,9 @@ pre {
     .blog-title {
       font-weight: bold;
     }
-    .date-time {
-      white-space: nowrap;
-    }
+    // .date-time {
+    //   white-space: nowrap;
+    // }
     p {
       margin: 0;
     }
